web/app/themes/catch-gare2/style.css
/*
Theme Name: Catch Gare
Template: catch-responsive
Author: Piment Digital
Version: 1.0
Updated: 2015-11-19 12:08
*/

@import url(https://fonts.googleapis.com/css?family=Raleway:400,500,200,800);

h1{
    font-family: "Raleway", Helvetica, Arial, sans-serif;
}

a{
    color: #bc6804;
}

a:hover{
    color: #bc6804;
}

.site{
    width: auto;
    background-color: rgba(255, 255, 255, 0.9);
}

.site-content{
    max-width: 1200px;
    margin: 0 auto;
}

.site-title{
    font-weight: 500;
}

.current_page_item a{
    background-color: white !important;
}

.nav-primary {
    background-color: #dadada;
}

.nav-primary .wrapper{
    max-width: 1200px;
    margin: 0 auto;
}

.menu-item  a{
    font-size: 90%;
    color: #333;
}

#masthead{
    background-color: white;
    background-image: url('http://vivregaresnordest.dev/app/uploads/2015/11/gares3.png');
    background-repeat: no-repeat;
    background-position: top center;
    background-attachment: fixed;
    background-size: 100%;
    height: 340px;
}

#masthead .wrapper{
    max-width: 1200px;
    margin: 0 auto;
}

#site-branding{
    width: 100%;
    text-align: center;
    display: inline-block;
    float: none;
}

#site-logo{
  width: 100%;
}

#site-header{
    float: none;
}

.page-header{
    padding: 0;
}

.nav-primary .menu li {
    text-align: center;
}
.nav-primary li {
    display: inline-block;
    float: none;
    position: relative;
}
input#s {
    line-height: 1.5;
}

.blog .format-aside .entry-title{
    display: block;
}

.hentry{
    padding: 0;
}

.home .post, .category .post{
    width: 47%;
    float: left;
    background-color: #fafafa;
    border: 1px solid #ebebeb;
    margin: 0 1em 1em 0;
    height: 480px;
    padding: 0;
}

.single .title{
    float: right;
    width: 78%
}

.single .entry-header{
    overflow: auto;
}


.single .entry-header img{
    float: left;
}


.post .archive-post-wrap{
    height: 350px;
    border: none;
}

.post .archive-post-wrap .featured-image {
    max-height: 170px;
    overflow: hidden;
    display: inherit!important;
    float: none!important;
    max-width: inherit!important;
    width: auto!important;
    margin-bottom: 0;
}

.post .archive-post-wrap .featured-image a img{
    min-width: 100%
}

.post .archive-post-wrap .entry-container{
    width: auto!important;
    padding: 20px;
}

.page-header .page-title{
    border: none;
}

#search-toggle{
    color: #333;
}

.sidebar-header-right{
    float: none;
    margin: 0 auto;
    width: 400px;
    text-align: center;
}

.sidebar-header-right .widget-wrap{
    float: none;
}

.twitter-timeline{
    height: 800px!important;
}

#supplementary{
    background-color: white;
    text-align: center;
}

#supplementary .wrapper{
    max-width: 1200px;
    margin: 0 auto;
}

.mc4wp-form-basic, .mc4wp-form-theme {
    margin: 0!important;
}

.mc4wp-form-basic p{
    margin-bottom: 5px!important;
}

.mc4wp-form-basic p label{
    font-size: 1em!important;
}

